commit to create procedures

--- a/LetsMeet.Business/LetsMeet.Business.csproj
+++ b/LetsMeet.Business/LetsMeet.Business.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LetsMeet.Abstractions\LetsMeet.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
