--- a/LetsMeet.WebApi/LetsMeet.WebApi.csproj
+++ b/LetsMeet.WebApi/LetsMeet.WebApi.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LetsMeet.Abstractions\LetsMeet.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
