--- a/LetsMeet.Store/LetsMeet.Store.csproj
+++ b/LetsMeet.Store/LetsMeet.Store.csproj
@@ -5,4 +5,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LetsMeet.Abstractions\LetsMeet.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
