--- a/LetsMeet.WebApi/appsettings.json
+++ b/LetsMeet.WebApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
