--- a/LetsMeet.WebApi/Properties/launchSettings.json
+++ b/LetsMeet.WebApi/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63359",
-      "sslPort": 44395
+      "applicationUrl": "http://localhost:59156/",
+      "sslPort": 44371
     }
   },
   "profiles": {
     "LetsMeet.WebApi": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7289;http://localhost:5289",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7289;http://localhost:5289",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
