commit redis and rabbitMQ

--- a/LetsMeet.WebApi/appsettings.json
+++ b/LetsMeet.WebApi/appsettings.json
@@ -7,7 +7,12 @@
     }
   },
   "AllowedHosts": "*",
+  // "ConnectionStrings": {
+  //  "LetsMeetWebApiContextConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+  // },
+
   "ConnectionStrings": {
-    "LetsMeetWebApiContextConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+    "DefaultConnection": "Data Source=sqldata;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+    //"DefaultConnection": "Data Source=sqldata; Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
   }
 }
