commit to show notification

--- a/LetsMeet.WebApi/appsettings.json
+++ b/LetsMeet.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True",
+  "ConnectionString": "Server=localhost,1440;Data Source=sqldata;Initial Catalog=master;Persist Security Info=True;User ID=SA;Password=vV5r9tn0M4@;Integrated Security=false;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,9 +10,9 @@
   // "ConnectionStrings": {
   //  "LetsMeetWebApiContextConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
   // },
-
+  "RedisURL": "localhost,abortConnect=false,connectTimeout=30000,responseTimeout=30000",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=sqldata;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
-    //"DefaultConnection": "Data Source=sqldata; Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+    //"DefaultConnection": "Data Source=localhost,1440;Persist Security Info=False;User ID=SA;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
+    "DefaultConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
   }
 }
