--- a/LetsMeet.WebApi/appsettings.json
+++ b/LetsMeet.WebApi/appsettings.json
@@ -7,12 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  // "ConnectionStrings": {
-  //  "LetsMeetWebApiContextConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
-  // },
-  "RedisURL": "localhost,abortConnect=false,connectTimeout=30000,responseTimeout=30000",
-  "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=localhost,1440;Persist Security Info=False;User ID=SA;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
-    "DefaultConnection": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+  "rabbitMq": {
+    "userName": "guest",
+    "password": "whatever"
+      /...
   }
+  "RedisConnectionString": "localhost,abortConnect=false,connectTimeout=30000,responseTimeout=30000",
+  "SqlConnectionString": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
 }
