--- a/LetsMeet.WebApi/appsettings.json
+++ b/LetsMeet.WebApi/appsettings.json
@@ -7,11 +7,19 @@
     }
   },
   "AllowedHosts": "*",
+
   "rabbitMq": {
     "userName": "guest",
-    "password": "whatever"
-      /...
-  }
+    "password": "whatever",
+    "VirtualHost": "/",
+    "HostName": "localhost",
+    "Port": "AmqpTcpEndpoint.UseDefaultPort"
+  },
+
   "RedisConnectionString": "localhost,abortConnect=false,connectTimeout=30000,responseTimeout=30000",
-  "SqlConnectionString": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+
+  "ConnectionStrings": {
+    "SqlConnectionString": "Data Source=DESKTOP-EMBAHHT\\AHMAD;Initial Catalog=LetsMeetDataBase;Integrated Security=True"
+  }
+
 }
